<resources>
    <string name="app_name">Latihan1</string>
    <string name="welcome">Welcome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="lahir">Tanggal Lahir</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="Login">login</string>
    <string name="login_failed">login gagal</string>
    <string name="invalid_username">username salah</string>
    <string name="invalid_password">password salah</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Default</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_info">Info</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="list_tahun_lagu">
        <item>list lagu tahun 2010</item>
        <item>list lagu tahun 2011</item>
        <item>list lagu tahun 2012</item>
        <item>list lagu tahun 2013</item>
        <item>list lagu tahun 2014</item>
        <item>list lagu tahun 2015</item>
        <item>list lagu tahun 2016</item>
        <item>list lagu tahun 2017</item>
        <item>list lagu tahun 2018</item>
        <item>list lagu tahun 2019</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
